--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+sudo: required
+
+services:
+  - docker
+
+before_install:
+  - docker build -t rjpdeen/bootbusiness .
+
 deploy:
   provider: elasticbeanstalk
   region: "eu-central-1"
