added travis file 5

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 services:
   - docker
 
+script:
+  - docker build -t rjpdeen/bootbusiness .
+
 deploy:
   provider: elasticbeanstalk
   region: "eu-central-1"
